javadocs written and script that is not needed removed.